feature - compile and run the UI application only with Gradle (maven is no more needed)